network/NetworkPolicies/11/solution/policy-2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-11-2
  namespace: np-11-b
spec:
  podSelector:
    matchLabels:
      app: service-b
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: np-11-a
      podSelector:
        matchLabels:
          app: service-a
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: np-11-a
      podSelector:
        matchLabels:
          app: service-a
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
